--- a/pom.xml
+++ b/pom.xml
@@ -121,6 +121,20 @@
 					</excludes>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<goals>
+							<goal>build-image</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<imageName>${project.name}</imageName>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
