--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -28,4 +28,10 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Build with Maven
-      run: mvn package -B --file pom.xml -DSPRING_DATASOURCE_USERNAME=${{secrets.SPRING_DATASOURCE_USERNAME}}
+      run: | 
+        mvn package -B --file pom.xml -DSPRING_DATASOURCE_USERNAME=${{secrets.SPRING_DATASOURCE_USERNAME}} -DOKTA_OAUTH2_ISSUER=${{secrets.OKTA_OAUTH2_ISSUER}} \
+        -DOKTA_OAUTH2_CLIENTID=${{secrets.OKTA_OAUTH2_CLIENTID}} -DOKTA_OAUTH2_CLIENTSECRET=${{secrets.OKTA_OAUTH2_CLIENTSECRET}} \
+        -DOKTA_OAUTH2_AUDIENCE=${{secrets.OKTA_OAUTH2_AUDIENCE}} -DOKTA_MANAGEMENTAPI_TOKENURL=${{secrets.OKTA_MANAGEMENTAPI_TOKENURL}} \
+        -DOKTA_MANAGEMENTAPI_AUDIENCE=${{secrets.OKTA_MANAGEMENTAPI_AUDIENCE}} -DOKTA_MANAGEMENTAPI_DOMAIN=${{secrets.OKTA_MANAGEMENTAPI_DOMAIN}} \
+        -DOKTA_MANAGEMENTAPI_CLIENTID=${{secrets.OKTA_MANAGEMENTAPI_CLIENTID}} -DOKTA_MANAGEMENTAPI_CLIENTSECRET=${{secrets.OKTA_MANAGEMENTAPI_CLIENTSECRET}} \
+        -DOKTA_MANAGEMENTAPI_GRANTTYPE=${{secrets.OKTA_MANAGEMENTAPI_GRANTTYPE}}
