--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.datasource.url=jdbc:h2:file:~/spring-boot-h2-db
 spring.datasource.username=@SPRING_DATASOURCE_USERNAME@
 spring.datasource.password=
 spring.datasource.driverClassName=org.h2.Driver
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
 #Resource Server Auth configuration
