--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -41,6 +41,7 @@ jobs:
 
     - name: Tag Docker Image
       run: |
+        docker image ls
         IMAGE_NAME="tla18b/music-store"  # Change this to your Docker Hub repository name
         IMAGE_TAG="latest"  # You can use a different tag or parameterize it
 
