github actions setup

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 spring.application.name=music-store
 server.port=8080
 
+allowedOrigin=@ALLOWED_ORIGIN@
+
 spring.h2.console.enabled=true
 #spring.datasource.url=jdbc:h2:mem:testdb
 
