Apple Music Developer Token handling

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,3 +30,9 @@ okta.managementApi.domain=@OKTA_MANAGEMENTAPI_DOMAIN@
 okta.managementApi.clientId = @OKTA_MANAGEMENTAPI_CLIENTID@
 okta.managementApi.clientSecret = @OKTA_MANAGEMENTAPI_CLIENTSECRET@
 okta.managementApi.grantType=@OKTA_MANAGEMENTAPI_GRANTTYPE@
+
+#apple music properties
+appleMusic.musickit.privateKey=@APPLE_MUSIC_PRIVATE_KEY@
+appleMusic.musickit.keyId=@APPLE_MUSIC_KEY_ID@
+appleMusic.musickit.teamId=@APPLE_MUSIC_TEAM_ID@
+appleMusic.musickit.origin=@APPLE_MUSIC_ORIGIN@
