Apple Music User Token handling

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,7 +32,7 @@ okta.managementApi.clientSecret = @OKTA_MANAGEMENTAPI_CLIENTSECRET@
 okta.managementApi.grantType=@OKTA_MANAGEMENTAPI_GRANTTYPE@
 
 #apple music properties
-appleMusic.musickit.privateKey=@APPLE_MUSIC_PRIVATE_KEY@
-appleMusic.musickit.keyId=@APPLE_MUSIC_KEY_ID@
-appleMusic.musickit.teamId=@APPLE_MUSIC_TEAM_ID@
-appleMusic.musickit.origin=@APPLE_MUSIC_ORIGIN@
+appleMusic.musickit.privateKey=@APPLEMUSIC_PRIVATEKEY@
+appleMusic.musickit.keyId=@APPLEMUSIC_KEYID@
+appleMusic.musickit.teamId=@APPLEMUSIC_TEAMID@
+appleMusic.musickit.origin=@APPLEMUSIC_ORIGIN@
