Apple Music User Token handling

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,7 +32,7 @@ okta.managementApi.clientSecret = @OKTA_MANAGEMENTAPI_CLIENTSECRET@
 okta.managementApi.grantType=@OKTA_MANAGEMENTAPI_GRANTTYPE@
 
 #apple music properties
-appleMusic.musickit.privateKey=@APPLEMUSIC_PRIVATEKEY@
-appleMusic.musickit.keyId=@APPLEMUSIC_KEYID@
-appleMusic.musickit.teamId=@APPLEMUSIC_TEAMID@
-appleMusic.musickit.origin=@APPLEMUSIC_ORIGIN@
+appleMusic.musickit.privateKey=@APPLEMUSIC_MUSICKIT_PRIVATEKEY@
+appleMusic.musickit.keyId=@APPLEMUSIC_MUSICKIT_KEYID@
+appleMusic.musickit.teamId=@APPLEMUSIC_MUSICKIT_TEAMID@
+appleMusic.musickit.origin=@APPLEMUSIC_MUSICKIT_ORIGIN@
