--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -34,8 +34,8 @@ jobs:
         -DOKTA_OAUTH2_AUDIENCE=${{secrets.OKTA_OAUTH2_AUDIENCE}} -DOKTA_MANAGEMENTAPI_TOKENURL=${{secrets.OKTA_MANAGEMENTAPI_TOKENURL}} \
         -DOKTA_MANAGEMENTAPI_AUDIENCE=${{secrets.OKTA_MANAGEMENTAPI_AUDIENCE}} -DOKTA_MANAGEMENTAPI_DOMAIN=${{secrets.OKTA_MANAGEMENTAPI_DOMAIN}} \
         -DOKTA_MANAGEMENTAPI_CLIENTID=${{secrets.OKTA_MANAGEMENTAPI_CLIENTID}} -DOKTA_MANAGEMENTAPI_CLIENTSECRET=${{secrets.OKTA_MANAGEMENTAPI_CLIENTSECRET}} \
-        -DOKTA_MANAGEMENTAPI_GRANTTYPE=${{secrets.OKTA_MANAGEMENTAPI_GRANTTYPE}} -DALLOWED_ORIGIN=${{secrets.ALLOWEDORIGIN}} -DAPPLEMUSIC_MUSICKIT_PRIVATEKEY=${{APPLEMUSIC_MUSICKIT_PRIVATEKEY}} \
-        -DAPPLEMUSIC_MUSICKIT_KEYID=${{APPLEMUSIC_MUSICKIT_KEYID}} -DAPPLEMUSIC_MUSICKIT_TEAMID=${{APPLEMUSIC_MUSICKIT_TEAMID}} -DAPPLEMUSIC_MUSICKIT_ORIGIN=${{APPLEMUSIC_MUSICKIT_ORIGIN}}
+        -DOKTA_MANAGEMENTAPI_GRANTTYPE=${{secrets.OKTA_MANAGEMENTAPI_GRANTTYPE}} -DALLOWED_ORIGIN=${{secrets.ALLOWEDORIGIN}} -DAPPLEMUSIC_MUSICKIT_PRIVATEKEY=${{secrets.APPLEMUSIC_MUSICKIT_PRIVATEKEY}} \
+        -DAPPLEMUSIC_MUSICKIT_KEYID=${{secrets.APPLEMUSIC_MUSICKIT_KEYID}} -DAPPLEMUSIC_MUSICKIT_TEAMID=${{secrets.APPLEMUSIC_MUSICKIT_TEAMID}} -DAPPLEMUSIC_MUSICKIT_ORIGIN=${{secrets.APPLEMUSIC_MUSICKIT_ORIGIN}}
 
     - name: Log into Docker Hub
       run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
